# local-codex

./: .gitignore  CODEMITRA.md  README.md  codemitra.toml  pyproject.toml  requirements.txt
.codemitra/: README.md  activity.md  context.md  plan.md
.obsidian/: workspace.json
app/: config.py  llm.py  main.py  memory.py  prompts.py  skills.py
app/agents/: brainstorm.py  codeintel.py  explainer.py  filesystem.py  planner.py  reader.py  response.py  reviewer.py  session.py  shell.py  web.py
docs/: Architecture.md  Claude Code Comparison.md  Claude Code Reference.md  Home.md  Multi-Agent System.md  Product Blueprint.md  Roadmap.md  Setup.md  Tech Stack.md  Testing Strategy.md  Vision.md
docs/agents/: Filesystem Agent.md
docs/reference/: Models.md  Ollama Models.md  Permissions.md  Tools.md
misc/: ascii.py
skills/01-repo-analyzer/: SKILL.md
skills/02-architect-planner/: SKILL.md
skills/03-fastapi-backend/: SKILL.md
skills/04-mongodb-data-layer/: SKILL.md
skills/05-rag-pipeline/: SKILL.md
skills/06-pdf-ingestion/: SKILL.md
skills/07-prompt-engineering/: SKILL.md
skills/08-test-generator/: SKILL.md
skills/09-code-reviewer/: SKILL.md
skills/10-docs-obsidian-memory/: SKILL.md
tests/: test_ascii.py  test_codeintel.py  test_explainer.py  test_filesystem.py  test_llm.py  test_main_ux.py  test_planner.py  test_prompts.py  test_reader.py  test_response.py  test_reviewer.py  test_session.py  test_shell.py  test_skills.py  test_web.py  test_workflows.py
