[project]
name = "local-codex"
version = "0.1.0"
dependencies = [
    "rich",
    "prompt-toolkit",
    "langchain-ollama",
    "langchain-core",
    "python-dotenv",
    "typer",
    "ollama",
    "Pillow",
    "numpy"
]

[project.scripts]
codemitra = "app.main:cli"

[tool.setuptools]
packages = ["app", "misc"]