[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-codex"
version = "0.1.0"
dependencies = [
    "rich",
    "prompt-toolkit",
    "langchain-ollama",
    "langchain-core",
    "python-dotenv",
    "tomli; python_version < '3.11'",
    "typer",
    "ollama",
    "Pillow",
    "numpy"
]

[project.scripts]
codemitra = "app.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*", "misc*"]
